# logpilot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  app.py  knowledge.py  logs.py  reports.py  sessions.py  suggestions.py  upload.py
backend/app/lib/: __init__.py  archive.py  config.py  db.py  embeddings.py  llm_client.py  loki_client.py  pg_vector_store.py  prometheus_client.py  prometheus_query.py  qdrant_client.py  repositories.py  vector_store.py
backend/app/lib/vector_stores/: __init__.py  pgvector.py
backend/app/mcp_server/: __init__.py  __main__.py  server.py
backend/app/models/: report.py  session.py
backend/app/services/: agent.py  agent_tools.py  code_search.py  export.py  incident_memory.py  knowledge.py  labels.py  log_parser.py  metrics.py  report_model.py  retention.py  suggestions.py  upload.py
backend/scripts/: backfill_report_embeddings.py
backend/tests/contract/: test_api_reports.py  test_api_sessions.py
backend/tests/unit/: test_agent.py  test_code_search.py  test_config.py  test_export.py  test_incident_memory.py  test_knowledge.py  test_log_parser.py  test_loki_client.py  test_loki_query_parser_filter.py  test_mcp_server.py  test_report_model.py  test_retention.py  test_suggestions.py  test_upload_api.py  test_upload_vector_drop.py  test_vector_store.py
docs/: PRD.md  knowledge-docker-options.md
frontend/: .env.example  (+5 more)
(+178 files in other folders)
